#Discussion results transferability

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -296,9 +296,11 @@ In particular, 'arable fields' harbor very few wildlings of any species and are 
 Long distance dispersal might preclude complete containment [@albertLanduseChangeSubalpine2008], but dramatic reductions in the number of wildlings are likely. 
 In some cases it may also be possible to alter ecosystem types adjacent to existing plantations to prevent (further) spread, for example by intensifying mowing to promote the appearance of 'agriculturally improved grassland'.
 Second, as a reactive measure, we recommend that monitoring and control be targeted to highly vulnerable ecosystem types.
-Applying this strategy to ecosystem types that are both vulnerable and rare --- like 'open active landslide' --- is especially likely to be cost-efficient. 
+Applying this strategy to ecosystem types that are both vulnerable and rare, like 'open active landslide', is especially likely to be cost-efficient. 
 
-Advantage: establishment patterns are likely to hold in other countries [@chytryHabitatInvasionsAlien2008]. Because the typification system we used is rule-based and aims to be observer-neutral, land managers in other countries can make educated inferences based on our results, even if a compatible or similar typication system does not exist. For example...
+The establishment patterns we quantify for four species are likely to hold, more or less, in other countries [@chytryHabitatInvasionsAlien2008].
+From a manager's perspective, we expect that the ecosystem types we report may be successfully translated to equivalent types in similar classification systems, because Nature in Norway classification is rule-based and aims for observer neutrality. 
+At the same time, we urge caution in extending our establishment estimates to ecosystems that are only broadly similar, because we found that similar types frequently showed markedly different invasibility (e.g. Norway spruce in 'agriculturally improved grassland with semi-natural character' vs. 'agriculturally improved grassland').
 
 Advantage: observational study (registering established individuals rather than doing seeding plots) is that seeds experience only natural conditions, and it measures long-term survival --- the quantity of interest for management. For practical reasons, seeding studies observe only the youngest life-stages, and the factors controlling individual success likely differ at later life-stages [@dovciakSeedRainEnvironmental2008]. Therefore, their results are not directly applicable to spread on the longer time-scales of interest to managers. Also, disturbance germination high but probably survival low [@petersonEcologyManagementSitka1997; @vikaneInvasionCallunaHeath2013]
 Limitation: wildling establishment varies not only in number and distance but also in growth rate across ecosystem types. Abundant but slow colonization may be of lesser concern than sparse but fast colonization, depending on management objectives.
